@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) [2021] Payara Foundation and/or its affiliates. All rights reserved.
+ * Copyright (c) [2021-2023] Payara Foundation and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -55,6 +55,7 @@ import static fish.payara.microprofile.openapi.impl.model.util.ModelUtils.mergeI
 import static fish.payara.microprofile.openapi.impl.model.util.ModelUtils.mergeProperty;
 import static fish.payara.microprofile.openapi.impl.model.util.ModelUtils.readOnlyView;
 import fish.payara.microprofile.openapi.impl.rest.app.provider.ObjectMapperFactory;
+import java.lang.reflect.InvocationTargetException;
 import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.List;
@@ -160,6 +161,7 @@ public class SchemaImpl extends ExtensibleImpl<Schema> implements Schema {
         from.setDefaultValue(annotation.getValue("defaultValue", Object.class));
         from.setName(annotation.getValue("name", String.class));
         from.setTitle(annotation.getValue("title", String.class));
+        from.setExtensions(parseExtensions(annotation));
         Double multipleOf = annotation.getValue("multipleOf", Double.class);
         if (multipleOf != null) {
             from.setMultipleOf(BigDecimal.valueOf(multipleOf));
@@ -183,6 +185,16 @@ public class SchemaImpl extends ExtensibleImpl<Schema> implements Schema {
         from.setMaxProperties(annotation.getValue("maxProperties", Integer.class));
         from.setMinProperties(annotation.getValue("minProperties", Integer.class));
         from.setRequired(annotation.getValue("requiredProperties", List.class));
+        String additionalPropertiesAttr = annotation.getValue("additionalProperties", String.class);
+        if (additionalPropertiesAttr == null || Void.class.getName().equals(additionalPropertiesAttr)) {
+            // Void is used as default, e.g. not specified value
+            from.setAdditionalPropertiesSchema(null);
+        } else if (org.eclipse.microprofile.openapi.annotations.media.Schema.True.class.getName().equals(additionalPropertiesAttr)
+                || org.eclipse.microprofile.openapi.annotations.media.Schema.False.class.getName().equals(additionalPropertiesAttr)) {
+            from.setAdditionalPropertiesBoolean(org.eclipse.microprofile.openapi.annotations.media.Schema.True.class.getName().equals(additionalPropertiesAttr));
+        } else {
+            from.setAdditionalPropertiesSchema(fromImplementation(additionalPropertiesAttr, context));
+        }
 
         extractAnnotations(annotation, context, "properties", "name", SchemaImpl::createInstance, from::addProperty);
         for (Entry<String, Schema> property : from.getProperties().entrySet()) {
@@ -262,8 +274,9 @@ public class SchemaImpl extends ExtensibleImpl<Schema> implements Schema {
                 if (schemaClassModel.isInstanceOf(Schema.class.getName())) {
                     try {
                         Class<?> oneOfClass = context.getApplicationClassLoader().loadClass(schemaClassName);
-                        return (Schema) oneOfClass.newInstance();
-                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+                        return (Schema) oneOfClass.getDeclaredConstructor().newInstance();
+                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException
+                            | NoSuchMethodException | SecurityException | InvocationTargetException ex) {
                         LOGGER.log(WARNING, "Unable to create Schema class instance.", ex);
                     }
                 }
@@ -798,6 +811,8 @@ public class SchemaImpl extends ExtensibleImpl<Schema> implements Schema {
             applyReference(to, from.getRef());
             return;
         }
+        // process extensions attributes
+        ExtensibleImpl.merge(from, to, override);
         if (from.getType() != null) {
             to.setType(mergeProperty(to.getType(), from.getType(), override));
         }
@@ -892,6 +907,12 @@ public class SchemaImpl extends ExtensibleImpl<Schema> implements Schema {
         }
         if (from.getNot() != null) {
             to.setNot(from.getNot());
+        }
+        if (from.getAdditionalPropertiesBoolean() != null) {
+            to.setAdditionalPropertiesBoolean(mergeProperty(to.getAdditionalPropertiesBoolean(), from.getAdditionalPropertiesBoolean(), override));
+        }
+        if (from.getAdditionalPropertiesSchema() != null) {
+            to.setAdditionalPropertiesSchema(mergeProperty(to.getAdditionalPropertiesSchema(), from.getAdditionalPropertiesSchema(), override));
         }
         mergeImmutableList(from.getAnyOf(), to.getAnyOf(), to::setAnyOf);
         mergeImmutableList(from.getAllOf(), to.getAllOf(), to::setAllOf);
