@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) [2018-2022] Payara Foundation and/or its affiliates. All rights reserved.
+ * Copyright (c) [2018-2023] Payara Foundation and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -531,7 +531,7 @@ public final class ModelUtils {
     public static <T> void extractAnnotations(
             AnnotationModel annotationModel,
             ApiContext context,
-            String type,
+            String parameterName,
             String key,
             BiFunction<AnnotationModel, ApiContext, T> factory,
             BiConsumer<String, T> wrapperAddFunction) {
@@ -539,7 +539,7 @@ public final class ModelUtils {
         if (wrapperAddFunction == null) {
             throw new IllegalArgumentException("null wrapperAddFunction. This is required to modify OpenAPI documents");
         }
-        List<AnnotationModel> annotations = annotationModel.getValue(type, List.class);
+        List<AnnotationModel> annotations = annotationModel.getValue(parameterName, List.class);
         if (annotations != null) {
             for (AnnotationModel annotation : annotations) {
                 wrapperAddFunction.accept(
@@ -627,7 +627,8 @@ public final class ModelUtils {
         // For every field except the reference
         for (Field field : referee.getClass().getDeclaredFields()) {
             // Make the field accessible
-            boolean accessible = field.isAccessible();
+            Object objectToTestAccessibility = Modifier.isStatic(field.getModifiers()) ? null : referee;
+            boolean accessible = field.canAccess(objectToTestAccessibility);
             field.setAccessible(true);
             try {
                 Object currentValue = field.get(referee);
@@ -706,14 +707,15 @@ public final class ModelUtils {
                         }
                     } else if (fromValue instanceof Constructible) {
                         if (toValue == null) {
-                            f.set(to, fromValue.getClass().newInstance());
+                            f.set(to, fromValue.getClass().getDeclaredConstructor().newInstance());
                             toValue = f.get(to);
                         }
                         merge(fromValue, toValue, override);
                     } else {
                         f.set(to, mergeProperty(f.get(to), f.get(from), override));
                     }
-                } catch (IllegalArgumentException | IllegalAccessException | InstantiationException e) {
+                } catch (IllegalArgumentException | IllegalAccessException | InstantiationException
+                        | NoSuchMethodException | SecurityException | InvocationTargetException e) {
                     // Ignore errors
                 }
             }
